Fix: Table select not visible in kumato mode
Those css hacks for the Select seems to be needed
anymore and messed with upstream styles.

--- a/tomatic/ui/style.styl
+++ b/tomatic/ui/style.styl
@@ -298,20 +298,6 @@ dialog .extension:hover {
 	}
 }
 
-select.pe-textfield__input {
-	background: white;
-	border: None;
-	border-bottom: 1pt solid #ddd;
-	&:focus {
-		border: None;
-		border-bottom: 2pt solid rgb(33, 150, 243);
-	}
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
-}
-
-
 .busylist {
     .turns {
         font-size: 120%;
